--- a/package.json
+++ b/package.json
@@ -25,31 +25,8 @@
     "pg": "^8.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.2",
-    "@babel/preset-env": "^7.18.9",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@types/lodash": "^4.14.182",
     "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
-    "concurrently": "^7.3.0",
-    "css-loader": "^6.7.1",
-    "css-minimizer-webpack-plugin": "^4.0.0",
-    "firebase-tools": "^11.1.0",
-    "html-loader": "^3.1.0",
-    "html-minimizer-webpack-plugin": "^4.0.0",
-    "html-webpack-plugin": "^5.5.0",
-    "jest": "^28.1.3",
-    "jest-environment-jsdom": "^28.1.3",
-    "jsdom": "^20.0.0",
-    "mini-css-extract-plugin": "^2.6.0",
-    "react-test-renderer": "^18.2.0",
-    "sass": "^1.52.2",
-    "sass-loader": "^13.0.0",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.9.2"
+    "jest": "^28.1.3"
   }
 }
