--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "server": "nodemon ./src/index.js",
     "deploy": "git push heroku main",
     "tables": "knex migrate:latest --env remote",
+    "posttables": "knex seed:run --env remote",
     "migration": "knex migrate:latest --env remote",
+    "postmigration": "knex seed:run --env remote",
     "data": "knex seed:run --env remote",
     "seed": "knex seed:run --env remote",
     "rollback": "knex migrate:rollback --env remote"
