--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "server": "nodemon ./src/index.js",
     "upload": "git push github main",
     "deploy": "git push heroku main",
-    "tables": "knex migrate:latest --env remote",
-    "posttables": "knex seed:run --env remote",
-    "migration": "knex migrate:latest --env remote",
-    "postmigration": "knex seed:run --env remote",
-    "data": "knex seed:run --env remote",
-    "seed": "knex seed:run --env remote",
-    "rollback": "knex migrate:rollback --env remote",
+    "tables": "knex migrate:latest --env development",
+    "posttables": "knex seed:run --env development",
+    "migration": "knex migrate:latest --env development",
+    "postmigration": "knex seed:run --env development",
+    "data": "knex seed:run --env development",
+    "seed": "knex seed:run --env development",
+    "rollback": "knex migrate:rollback --env development",
     "test": "jest",
     "watch": "jest --watchAll"
   },
