--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "rollback-elephantsql": "knex migrate:rollback --env elephantsql",
     "migration-typeorm": "typeorm-ts-node-commonjs migration:run --dataSource data-source.ts",
     "rollback-typeorm": "typeorm-ts-node-commonjs migration:revert --dataSource data-source.ts",
-    "build": "webpack --config webpack.config.node.js",
-    "webpack": "webpack --config webpack.config.node.js",
+    "build": "rm build -rf && tsc && ts-node build",
+    "webpack": "webpack --config webpack.config.dist.js",
     "test": "jest",
     "watch": "jest --watchAll",
     "rebuild": "cd .. && npm run webpack && cd dist && npm start"
@@ -58,6 +58,7 @@
     "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
     "jest": "^28.1.3",
+    "terser": "^5.16.3",
     "terser-webpack-plugin": "^5.3.6",
     "ts-loader": "^9.4.2",
     "typescript": "^4.8.3",
