--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,11 +28,11 @@
 
     /* Modules */
     "module": "commonjs" /* Specify what module code is generated. */,
-    "rootDir": "." /* Specify the root folder within your source files. */,
+    "rootDir": "./src" /* Specify the root folder within your source files. */,
     // "rootDir": "src/" /* Specify the root folder within your source files. */,
     "moduleResolution": "nodenext" /* Specify how TypeScript looks up a file from a given module specifier. */,
     // "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
-    "baseUrl": "." /* Specify the base directory to resolve non-relative module names. */,
+    "baseUrl": "./src" /* Specify the base directory to resolve non-relative module names. */,
     "paths": {
       "assets/*": ["src/assets/*"],
       "bootstrap/*": ["node_modules/bootstrap/*"],
@@ -119,5 +119,6 @@
     // "skipLibCheck": false /* Skip type checking all .d.ts files. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "exclude": ["bak"]
+  "exclude": ["bak", "./*.ts"]
+  // "include": ["./src"]
 }
