--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "knex": "^2.3.0",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.6.0",
+    "mysql": "^2.18.1",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.11"
