--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "jest": "^28.1.3",
     "terser": "^5.16.3",
     "terser-webpack-plugin": "^5.3.6",
+    "ts-jest": "^29.0.1",
     "ts-loader": "^9.4.2",
     "typescript": "^4.8.3",
     "webpack": "^5.74.0",
