--- a/package.json
+++ b/package.json
@@ -5,25 +5,35 @@
   "main": "src/index.js",
   "mainHTML": "src/index.html",
   "scripts": {
+    "start-netlify": "netlify dev",
     "start": "nodemon ./src/index.ts",
+    "start-build": "nodemon ./build/src/index.js",
+    "server": "netlify dev",
     "dist": "nodemon ./dist/index.js",
-    "server": "nodemon ./src/index.ts",
     "upload": "git push github main",
-    "deploy": "git push heroku main",
-    "tables": "knex migrate:latest --env mysql",
-    "posttables": "knex seed:run --env mysql",
-    "migration": "knex migrate:latest --env mysql",
-    "postmigration": "knex seed:run --env mysql",
-    "data": "knex seed:run --env mysql",
-    "seed": "knex seed:run --env mysql",
-    "rollback": "knex migrate:rollback --env mysql",
+    "deploy": "netlify deploy",
+    "staging": "netlify deploy",
+    "production": "netlify deploy --prod",
+    "migration": "knex migrate:latest --env cockroachdb",
+    "postmigration": "knex seed:run --env cockroachdb",
+    "seed": "knex seed:run --env cockroachdb",
+    "rollback": "knex migrate:rollback --env cockroachdb",
+    "tables-mysql": "knex migrate:latest --env mysql",
+    "posttables-mysql": "knex seed:run --env mysql",
+    "migration-mysql": "knex migrate:latest --env mysql",
+    "postmigration-mysql": "knex seed:run --env mysql",
+    "data-mysql": "knex seed:run --env mysql",
+    "seed-mysql": "knex seed:run --env mysql",
+    "rollback-mysql": "knex migrate:rollback --env mysql",
     "migration-elephantsql": "knex migrate:latest --env elephantsql",
     "postmigration-elephantsql": "knex seed:run --env elephantsql",
     "seed-elephantsql": "knex seed:run --env elephantsql",
     "rollback-elephantsql": "knex migrate:rollback --env elephantsql",
     "migration-typeorm": "typeorm-ts-node-commonjs migration:run --dataSource data-source.ts",
     "rollback-typeorm": "typeorm-ts-node-commonjs migration:revert --dataSource data-source.ts",
-    "build": "rm build -rf && tsc && node build.js",
+    "build": "tsc",
+    "build-netlify": "npm run build && npm run minify && netlify build",
+    "minify": "ts-node ./src/utils/minify.ts build",
     "webpack": "webpack --config webpack.config.dist.js",
     "test": "jest",
     "watch": "jest --watchAll",
@@ -33,6 +43,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@netlify/functions": "^1.4.0",
     "@sendgrid/mail": "^7.7.0",
     "axios": "^1.1.2",
     "better-sqlite3": "^7.6.2",
@@ -47,6 +58,7 @@
     "mysql": "^2.18.1",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
+    "serverless-http": "^3.1.1",
     "typeorm": "^0.3.11"
   },
   "devDependencies": {
@@ -58,7 +70,9 @@
     "@types/crypto-js": "^4.1.1",
     "@types/node": "^18.7.16",
     "babel-loader": "^8.2.5",
+    "cockroachdb": "^1.0.3",
     "jest": "^29.4.1",
+    "netlify-cli": "^12.10.0",
     "terser": "^5.16.3",
     "terser-webpack-plugin": "^5.3.6",
     "ts-jest": "^29.0.1",
