--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "level-5-capstone",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
-  "mainHTML": "src/index.html",
+  "main": "build/src/index.js",
+  "mainHTML": "dist/index.html",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "start-netlify": "netlify dev",
     "start": "nodemon ./src/index.ts",
