--- a/netlify.toml
+++ b/netlify.toml
@@ -7,8 +7,8 @@
 # [build.processing.js]
 #   bundle = false
 #   minify = false
-# [context.build.environment]
-#   NODE_VERSION = "18.x"
+[build.environment]
+  NODE_VERSION = "18.14.0"
 
 [functions]
   directory = "build/lambda/" #DEFAULT: "netlify/functions/"
