--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "rollback-elephantsql": "knex migrate:rollback --env elephantsql",
     "migration-typeorm": "typeorm-ts-node-commonjs migration:run --dataSource data-source.ts",
     "rollback-typeorm": "typeorm-ts-node-commonjs migration:revert --dataSource data-source.ts",
-    "compile": "tsc",
+    "compile": "tsc && ts-node ./src/utils/minify.ts build",
     "build-netlify": "npm run build && npm run minify && netlify build",
-    "build": "ts-node ./src/utils/minify.ts build && netlify build",
+    "build": "netlify build",
     "minify": "ts-node ./src/utils/minify.ts build",
     "webpack": "webpack --config webpack.config.dist.js",
     "test": "jest",
