--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "rollback-elephantsql": "knex migrate:rollback --env elephantsql",
     "migration-typeorm": "typeorm-ts-node-commonjs migration:run --dataSource data-source.ts",
     "rollback-typeorm": "typeorm-ts-node-commonjs migration:revert --dataSource data-source.ts",
-    "compile": "tsc && ts-node ./src/utils/minify.ts build",
-    "build-netlify": "npm run build && npm run minify && netlify build",
-    "build": "netlify build",
-    "minify": "ts-node ./src/utils/minify.ts build",
+    "compile": "tsc",
+    "compile-minify": "webpack --config webpack.config.minify.js",
+    "build": "npm run minify",
+    "build-netlify": "netlify build",
+    "minify": "node ./minify.js build",
     "webpack": "webpack --config webpack.config.dist.js",
     "test": "jest",
     "watch": "jest --watchAll",
