--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "start-build": "nodemon ./build/src/index.js",
     "build-start-netlify": "npm run build-netlify && npm run start-netlify",
     "server": "netlify dev",
-    "dist": "nodemon ./dist/index.js",
-    "upload": "git push github main",
-    "deploy": "netlify deploy",
+    "dist": "nodemon ./build/index.js",
+    "push": "git push github main",
+    "deploy": "git push github-backend main",
+    "deploy-netlify": "netlify deploy",
     "staging": "netlify deploy",
     "production": "netlify deploy --prod",
     "migration": "knex migrate:latest --env cockroachdb",
@@ -37,12 +38,15 @@
     "rollback-typeorm": "typeorm-ts-node-commonjs migration:revert --dataSource data-source.ts",
     "compile": "tsc",
     "compile-minify": "webpack --config webpack.config.minify.js",
-    "build": "npm run minify",
+    "build-production": "npm run minify",
     "build-netlify": "netlify build",
+    "build": "npm run compile && npm run minify",
+    "build-all": "npm run compile && npm run minify && npm run build-netlify",
+    "build-start": "./build-start.sh",
     "minify": "node ./minify.js build",
     "webpack": "webpack --config webpack.config.dist.js",
-    "test-build": "jest --runInBand --rootDir build",
-    "test": "jest --runInBand",
+    "test-production": "jest --runInBand --config jest.config.production.ts",
+    "test": "jest --runInBand --config jest.config.development.ts",
     "watch": "jest --watchAll",
     "rebuild": "cd .. && npm run webpack && cd dist && npm start"
   },
