--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -21,7 +21,7 @@ jobs:
           npm install
       - name: Run tests
         run: |
-          npm run test-build
+          npm run test-production
           echo "🍏 This job's status is ${{ job.status }}."
   Build:
     runs-on: ubuntu-latest
@@ -30,7 +30,7 @@ jobs:
       - uses: actions/checkout@v3
       - run: |
           npm install
-          npm run build
+          npm run build-production
       - name: Output downloadable build
         uses: actions/upload-artifact@v3
         with:
