--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,5 +1,7 @@
 name: CI/CD Apprentice 1
 run-name: ${{ github.actor }} started GitHub Actions 🚀
+env:
+  mode: cockroachdb
 on: [push]
 jobs:
   Test:
