--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "deploy-netlify": "netlify deploy",
     "staging": "netlify deploy",
     "production": "netlify deploy --prod",
-    "migration": "knex migrate:latest --env cockroachdb",
-    "postmigration": "knex seed:run --env cockroachdb",
+    "tables": "knex migrate:latest --env cockroachdb",
     "seed": "knex seed:run --env cockroachdb",
+    "migration": "npm run tables && npm run seed",
     "rollback": "knex migrate:rollback --env cockroachdb",
     "tables-mysql": "knex migrate:latest --env mysql",
     "posttables-mysql": "knex seed:run --env mysql",
@@ -34,8 +34,12 @@
     "postmigration-elephantsql": "knex seed:run --env elephantsql",
     "seed-elephantsql": "knex seed:run --env elephantsql",
     "rollback-elephantsql": "knex migrate:rollback --env elephantsql",
-    "migration-typeorm": "typeorm-ts-node-commonjs migration:run --dataSource data-source.ts",
+    "tables-typeorm": "typeorm-ts-node-commonjs schema:sync --dataSource data-source.ts",
+    "seed-typeorm": "typeorm-ts-node-commonjs migration:run --dataSource data-source.ts",
+    "migration-typeorm": "npm run tables-typeorm && npm run seed-typeorm",
     "rollback-typeorm": "typeorm-ts-node-commonjs migration:revert --dataSource data-source.ts",
+    "migration-all": "npm run migration && npm run migration-typeorm",
+    "rollback-all": "npm run rollback && npm run rollback-typeorm",
     "compile": "tsc",
     "compile-minify": "webpack --config webpack.config.minify.js",
     "build-production": "npm run minify",
@@ -48,7 +52,8 @@
     "test-production": "jest --runInBand --config jest.config.production.ts",
     "test": "jest --runInBand --config jest.config.development.ts",
     "watch": "jest --watchAll",
-    "rebuild": "cd .. && npm run webpack && cd dist && npm start"
+    "rebuild": "cd .. && npm run webpack && cd dist && npm start",
+    "typeorm": "typeorm-ts-node-commonjs"
   },
   "keywords": [],
   "author": "",
