--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,7 @@
     // "rootDir": "src/" /* Specify the root folder within your source files. */,
     // "moduleResolution": "nodenext" /* Specify how TypeScript looks up a file from a given module specifier. */,
     "moduleResolution": "nodenext" /* Specify how TypeScript looks up a file from a given module specifier. */,
-    "baseUrl": "./src" /* Specify the base directory to resolve non-relative module names. */,
+    "baseUrl": "." /* Specify the base directory to resolve non-relative module names. */,
     // "baseUrl": "./src" /* Specify the base directory to resolve non-relative module names. */,
     "paths": {
       "assets/*": ["src/assets/*"],
