--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start-netlify": "netlify dev",
     "start": "nodemon ./src/index.ts",
     "start-build": "nodemon ./build/src/index.js",
+    "start-artifact": "nodemon ./.artifact/build/src/index.js",
     "build-start-netlify": "npm run build-netlify && npm run start-netlify",
     "server": "netlify dev",
     "dist": "nodemon ./build/index.js",
@@ -19,10 +20,10 @@
     "deploy-netlify": "netlify deploy",
     "staging": "netlify deploy",
     "production": "netlify deploy --prod",
-    "tables": "knex migrate:latest --env cockroachdb",
-    "seed": "knex seed:run --env cockroachdb",
-    "migration": "npm run tables && npm run seed",
-    "rollback": "knex migrate:rollback --env cockroachdb",
+    "tables-knex": "knex migrate:latest --env cockroachdb",
+    "seed-knex": "knex seed:run --env cockroachdb",
+    "migration-knex": "npm run tables-knex && npm run seed-knex",
+    "rollback-knex": "knex migrate:rollback --env cockroachdb",
     "tables-mysql": "knex migrate:latest --env mysql",
     "posttables-mysql": "knex seed:run --env mysql",
     "migration-mysql": "knex migrate:latest --env mysql",
@@ -38,8 +39,8 @@
     "seed-typeorm": "typeorm-ts-node-commonjs migration:run --dataSource data-source.ts",
     "migration-typeorm": "npm run tables-typeorm && npm run seed-typeorm",
     "rollback-typeorm": "typeorm-ts-node-commonjs migration:revert --dataSource data-source.ts",
-    "migration-all": "npm run migration && npm run migration-typeorm",
-    "rollback-all": "npm run rollback && npm run rollback-typeorm",
+    "migration": "npm run migration-knex && npm run migration-typeorm",
+    "rollback": "npm run rollback-knex && npm run rollback-typeorm",
     "compile": "tsc",
     "compile-minify": "webpack --config webpack.config.minify.js",
     "build-production": "npm run minify",
